<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnteryActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/state"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/district"
        android:textSize="18sp"
        android:layout_marginLeft="30dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/taluk"
        android:textSize="18sp"
        android:layout_marginLeft="30dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_below="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner3"
        android:hint="@string/enter_your_name"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_centerHorizontal="true"
        />





    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/enter" />

</RelativeLayout>